syntax = "proto3";

package qclaogui.project.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option go_package = "github.com/qclaogui/golang-api-server/genproto/project/apiv1/projectpb";

// Describes a project.
message Project {
  option (google.api.resource) = {
    type: "project.qclaogui.com/Project",
    pattern: "projects/{project}"
  };
  string name = 1;
}

// Request to create a new project.
message CreateProjectRequest {
  // The project to create.
  Project project = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request to get a project.
message GetProjectRequest {
  // The name of the project in the form of `projects/{project}`.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "project.qclaogui.com/Project"
  ];
}

// Request to list projects.
message ListProjectsRequest {
  // The filter expression.
  string filter = 1 [(google.api.field_behavior) = REQUIRED];

  // Number of projects to return in the list.
  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];

  // Token to provide to skip to a particular spot in the list.
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Response for listing projects.
message ListProjectsResponse {
  // The projects requested.
  repeated Project projects = 1;

  // The next pagination token in the list response. It should be used as
  // `page_token` for the following request. An empty value means no more
  // results.
  string next_page_token = 2;
}

// Request to delete a project.
message DeleteProjectRequest {
  // The name of the project in the form of `projects/{project}`.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "project.qclaogui.com/Project"
  ];
}
